small spacing fix on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -138,4 +138,8 @@ a:hover {
     body {
         font-size: 1.2rem;
     }
+
+    body {
+        margin-top: 150px;
+    }
 }
